<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/cvv_info"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="120dp" />

        <TextView
            android:text="@string/cvv_text"
            android:textSize="10sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlackLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:background="@drawable/border_radios_background"
            android:layout_marginTop="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/cvv_number"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/cvvNumber"
                android:maxLength="4"
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:visibility="visible"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cancelBtn"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:layout_marginRight="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="14sp"
                android:backgroundTint="@color/colorBlackSuperLight"
                android:background="@drawable/solid_round_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/payNow"
                android:text="@string/pay_now"
                android:textColor="@color/colorPrimaryTextColor"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="14sp"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/solid_round_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <include
            android:visibility="gone"
            android:id="@+id/loadingLayout"
            layout="@layout/progress_layout"/>

    </LinearLayout>

</LinearLayout>