<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/ssl_commerz_toolbar"/>

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/progress_layout"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cardLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/please_select_your_saved_card_to_pay"
                android:textColor="#333"
                android:textSize="14sp" />

            <com.sslcommerz.library.payment.view.custom.CustomViewPager
                android:id="@+id/slider"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bankLayout"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/selectPaymentMethod"
                android:textColor="#333"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    app:cardElevation="2sp"
                    app:cardCornerRadius="2dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/cardTab"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="32dp">

                        <LinearLayout
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/cardIcon"
                                android:tint="@color/colorPrimary"
                                android:src="@drawable/ic_card"
                                android:layout_width="15dp"
                                android:layout_height="15dp" />

                            <TextView
                                android:id="@+id/cardText"
                                android:text="@string/cards"
                                android:layout_gravity="center_vertical"
                                android:textSize="@dimen/small_text_size"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <View
                            android:id="@+id/cardDivider"
                            android:background="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    app:cardElevation="2sp"
                    app:cardCornerRadius="2dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/mobileTab"
                        android:orientation="vertical"
                        android:background="@drawable/full_white_form_radius"
                        android:layout_width="match_parent"
                        android:layout_height="32dp">

                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/mobileIcon"
                                android:tint="@color/colorBlack"
                                android:src="@drawable/ic_mobile_banking"
                                android:layout_width="15dp"
                                android:layout_height="15dp" />

                            <TextView
                                android:id="@+id/mobileText"
                                android:text="@string/mobile"
                                android:layout_gravity="center_vertical"
                                android:textSize="@dimen/small_text_size"
                                android:textStyle="bold"
                                android:textColor="@color/colorBlack"
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <View
                            android:id="@+id/mobileDivider"
                            android:visibility="gone"
                            android:layout_gravity="bottom"
                            android:background="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    app:cardElevation="2sp"
                    app:cardCornerRadius="2dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.3"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/netBankingTab"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@drawable/full_white_form_radius">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/netBankingIcon"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:src="@drawable/ic_net_banking"
                                android:tint="@color/colorBlack" />

                            <TextView
                                android:id="@+id/netBankingText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="5dp"
                                android:textStyle="bold"
                                android:text="@string/net_banking"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/small_text_size" />

                        </LinearLayout>

                        <View
                            android:id="@+id/netBankingDivider"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_gravity="bottom"
                            android:background="@color/colorPrimary"
                            android:visibility="gone" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    app:cardElevation="2sp"
                    app:cardCornerRadius="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/allTab"
                        android:orientation="vertical"
                        android:background="@drawable/full_white_form_radius"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp">

                        <LinearLayout
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/allBankIcon"
                                android:tint="@color/colorBlack"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp"
                                android:src="@drawable/ic_all_payment"
                                android:layout_width="15dp"
                                android:layout_height="15dp" />

                            <TextView
                                android:id="@+id/allBankText"
                                android:text="@string/all"
                                android:textStyle="bold"
                                android:layout_gravity="center_vertical"
                                android:layout_marginRight="10dp"
                                android:textSize="@dimen/small_text_size"
                                android:textColor="@color/colorBlack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <View
                            android:id="@+id/allBankDivider"
                            android:visibility="gone"
                            android:layout_gravity="bottom"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/bankListShow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    app:cardElevation="2sp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/colorRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/cancelBtn"
                        android:text="@string/cancel"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp" />

                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="10dp"/>

                <android.support.v7.widget.CardView
                    app:cardElevation="2sp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/payNow"
                        android:text="@string/pay_now"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp" />

                </android.support.v7.widget.CardView>



            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>